erDiagram
    PATIENTS ||--|{ APPOINTMENTORDERS : places
    CLINICALSTUDIES ||--|{ AVAILABILITY : contains
    APPOINTMENTDETAILS }|--|| CLINICALSTUDIES : contains
    APPOINTMENTORDERS ||--|{ APPOINTMENTDETAILS : includes
    EVENTLOGS ||--|| APPOINTMENTORDERS : contains
    DOCTORS ||--|{ APPOINTMENTORDERS : inCharge
    FULFILLMENTEVENTS ||--|| APPOINTMENTORDERS : contains
    PATIENTS {
        int PatientId
        nvarchar CURP
        nvarchar Email
        nvarchar FirstName
        nvarchar LastName
        Date BirthDate
    }
    DOCTORS{
        int DoctorId
        nvarchar FirstName
        nvarchar LastName
        nvarchar MedicalLicense
    }
    CLINICALSTUDIES {
        int ClinicalStudyId
        varchar LOINC
        nvarchar StudyName
        nvarchar Description
    }
    AVAILABILITY {
        int AvailabilityId
        int ClinicalStudyId
        int DurationMinutes
        int Slots
        Date Day
        byte[] Rowversion
    }
    APPOINTMENTORDERS {
        int OrderId
        int PatientId
        int DoctorId
        int Priority
        int Status
        datetime2 CreatedUTC
        datetime2 CompletedUTC
    }
    APPOINTMENTDETAILS {
        int AppointmentDetailId
        int AppointmentOrderId
        int ClinicalStudyId
        int Quantity
        Date Date
    }
    FULFILLMENTEVENTS{
        int FulfillmentEventId
        int AppointmentOrderId
        nvarchar Type
        datetime2 FulfilledAtUtc
    }
    EVENTLOGS {
        int EventLogId
        int AppointmentOrderId
        nvarchar Message
        nvarchar MessageTemplate
        nvarchar Level
        datetime2 TimeStamp
        nvarchar Exception
        nvarchar Properties
    }